force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>This object ties the tracking data to relevant business records (e.g., Orders, Opportunities, Lab Orders) and provides a high-level view of the shipment.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHIP-{00000000}</displayFormat>
        <label>Shipment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>