force-app/main/default/objects/Shipment__c/fields/Delivery_Exception__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Exception</label>
    <type>Checkbox</type>
</CustomField>