force-app/main/default/objects/Shipment__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsError</label>
    <type>Checkbox</type>
</CustomField>