force-app/main/default/objects/Shipment__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>