force-app/main/default/objects/Shipment__c/fields/Tracking_Master__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking Master</label>
    <referenceTo>Tracking_Master__c</referenceTo>
    <relationshipLabel>Shipment</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>