force-app/main/default/objects/Shipment__c/listViews/All_shipments.listView-meta.xml
<ListView>
    <fullName>All_shipments</fullName>
    <columns>NAME</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Ship_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All shipments</label>
</ListView>