force-app/main/default/objects/Shipment__c/listViews/Ongoing_Shipments.listView-meta.xml
<ListView>
    <fullName>Ongoing_Shipments</fullName>
    <columns>NAME</columns>
    <columns>Carrier__c</columns>
    <columns>Status_Description__c</columns>
    <columns>Tracking_URL__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Exception_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delivered</value>
    </filters>
    <label>Ongoing Shipments</label>
</ListView>